# team-LECture-bot

./: .gitignore  .pre-commit-config.yaml  :w  README.md  TESTING.md  compose.aws.yml  docker-compose.yml  errors.txt  genai.sh  jest.config.ts  output.yaml  package-lock.json  package.json  playwright.config.ts  tree.txt  tsconfig.json
api/: README.md  document-api.yaml  genai-backend-openapi.yaml  openapi.yaml  user-course-openapi.yaml
client/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: UseCaseDiagram.drawio  analysis-object-model-description.md  architecture-description.md  architecture.drawio  component-diagram-explanation.md  genai-getting-started.md  initial_concept.md  use-case-diagram-explanation.md
e2e/: coursespace.spec.ts  documents.spec.ts  flashcards.spec.ts  (+4 more)
genai/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
genai/src/genai/: main.py
genai/src/genai/api/: schemas.py
genai/src/genai/api/routers/: flashcard.py  indexing.py  query.py
genai/src/genai/core/: config.py
genai/src/genai/pipelines/: flashcard_pipeline.py  indexing_pipeline.py
genai/src/genai/services/: llm_service.py  text_processing_service.py  vector_store_service.py
services/genai/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/genai/src/genai/: main.py
services/genai/src/genai/api/: schemas.py  schemas_v1.py
services/genai/src/genai/api/routers/: deindexing.py  flashcard.py  indexing.py  query.py
services/genai/src/genai/core/: config.py  exceptions.py  llm_client.py  llm_factory.py
services/genai/src/genai/pipelines/: deindexing_pipeline.py  flashcard_pipeline.py  indexing_pipeline.py  qa_pipeline.py
services/genai/src/genai/services/: embedding_service.py  llm_service.py  vector_store_service.py
services/genai/tests/integration/: test_query_endpoint.py
services/genai/tests/unit/: test_qa_pipeline.py
services/genai/tests/unit/core/: test_llm_client.py
services/genai/tests/unit/pipelines/: test_deindexing_pipeline.py  test_flashcard_pipeline.py  test_indexing_pipeline.py  test_qa_pipeline.py
(+335 files in other folders)
