[project]
name = "genai"
version = "0.1.0"
description = ""
authors = [
    {name = "carloslme",email = "32799711+carloslme@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "weaviate-client (>=4.15.0,<5.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)"
]

[tool.poetry]
packages = [{include = "genai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
