[project]
name = "genai-service"
version = "0.1.0"
description = "GenAI service for LECture-bot"
authors = [
    {name = "carloslme",email = "32799711+carloslme@users.noreply.github.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = ">=0.3.25,<0.4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {version = ">=0.34.3,<0.35.0", extras = ["standard"]}
pydantic = ">=2.11.5,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
sentence-transformers = ">=4.1.0,<5.0.0"
weaviate-client = ">=4.15.0,<5.0.0"
openai = ">=1.84.0,<2.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
langchain-community = ">=0.3.24,<0.4.0"
langchain-huggingface = ">=0.2.0,<0.3.0"
langchain-openai = ">=0.3.22,<0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry]
name = "genai-service"
version = "0.1.0"
description = "GenAI service for LECture-bot"
authors = ["carloslme <32799711+carloslme@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "genai", from = "src"}]
# Dependencies are specified in the [project] section and should be read by Poetry 1.2+

[build-system]
requires = ["poetry-core>=1.0.0"] # Aligned for Poetry 1.x series
build-backend = "poetry.core.masonry.api"
